#cmake version
cmake_minimum_required(VERSION 2.8.3)
#project name
PROJECT(demoE)

ADD_SUBDIRECTORY(./core)
#ADD_SUBDIRECTORY(./example)
#set(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/lib)
#head file path
#INCLUDE_DIRECTORIES(include)
#source directory
#AUX_SOURCE_DIRECTORY(${CMAKE_SOURCE_DIR}/src DIR_SRCS)
#set environment variable
#SET(LIB_SRC ${DIR_SRCS})
#SET(example ${CMAKE_SOURCE_DIR}/example)
#AUX_SOURCE_DIRECTORY(example EXAMPLE_SRC)
#LIST(APPEND DIR_SRCS EXAMPLE_SRC)
#ADD_LIBRARY(sqrt ${DIR_SRCS})
#add link library
#SET(LIBRARIES /usr/lib/x86_64-linux-gnu/libm.so)
#TARGET_LINK_LIBRARIES(sqrt ${LIBRARIES})
#set environment variable
#ADD_EXECUTABLE(sqrtDemo ${EXAMPLE_SRC})
#add link library
#TARGET_LINK_LIBRARIES(sqrtDemo sqrt)

