set(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/lib)
set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/test)
LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})

ADD_SUBDIRECTORY(./hello)
ADD_SUBDIRECTORY(./sqrt)



#INCLUDE_DIRECTORIES(. )
#source directory
#AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/core CORE_CPP_LIST)
#list(APPEND CPP_LIST ${CPP_LIST}  ${CORE_CPP_LIST})
#message(STATUS "cpplistcore =  ${CPP_LIST}")
#set(CORE_CPP_LIST ${CORE_CPP_LIST} PARENT_SCOPE)
#set extern libraries
#SET(EXT_LIB /usr/lib/x86_64-linux-gnu/libm.so)
