#AUX_SOURCE_DIRECTORY(${PROJECT_SOURCE_DIR}/src ALL_CODE_LIST)
ADD_EXECUTABLE(hello hello.c)
#MESSAGE(STATUS ${DIR_SRCS})
#add link library
TARGET_LINK_LIBRARIES(hello ${LIBRARIES})
#set output path
SET(EXECUTABLE_OUTPUT_PATH "${CMAKE_BINARY_DIR}/bin")
#MESSAGE(${EXECUTABLE_OUTPUT_PATH})
#SET(CMAKE_INSTALL_PREFIX /home/liqi/workspace/cmake)
INSTALL(TARGETS hello RUNTIME DESTINATION bin)