#set(LIBRARY_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/lib)
#set(EXECUTABLE_OUTPUT_PATH ${CMAKE_SOURCE_DIR}/test)
INCLUDE_DIRECTORIES(./include)
AUX_SOURCE_DIRECTORY(./src SQRT_LIB_CPP)
ADD_LIBRARY(sqrt SHARED ${SQRT_LIB_CPP})
AUX_SOURCE_DIRECTORY(./test SQRT_TEST_CPP)
ADD_EXECUTABLE(testSqrt ${SQRT_TEST_CPP})
#LINK_DIRECTORIES(${LIBRARY_OUTPUT_PATH})
#SET(LIBRARIES /usr/lib/x86_64-linux-gnu/libm.so)
TARGET_LINK_LIBRARIES(testSqrt m sqrt)
#TARGET_LINK_LIBRARIES(testSqrt ${LIBRARIES} sqrt)
